fix: sidebar last item visible for all devices
sidebar last item was getting hidden due to less margin

--- a/documentation/documentation.css
+++ b/documentation/documentation.css
@@ -77,6 +77,10 @@
     transition: 0.3s all ease-in-out;
 }
 
+.sidebar__items:last-child {
+    margin-bottom: 10rem;
+}
+
 
 /* ---- only for components ---- */
 
